Always use angle instead of pixel scrolling for wheel events

On OpenSuse apparently sometimes QWheelEvent::pixelDelta() is zero, but
QWheelEvent::angleDelta() is not.

BUG: 462864